feat: Add Bazel Native BSP integration
Implement an in-process BSP server for Bazel with gRPC BES
event streaming, compile progress notifications, and
classpath resolution.

Made-with: Cursor